--- a/blog/templates/account/footer.html
+++ b/blog/templates/account/footer.html
@@ -95,7 +95,7 @@
           <a href="#!">Your Account</a>
         </p>
         <p>
-          <a href="{% url 'posts:post-upload'%}">Upload Post</a>
+          <a href="{% url 'posts:post_create'%}">Upload Post</a>
         </p>
         <p>
           <a href="#!">FAQ</a>
