--- a/blog/templates/account/sidebar.html
+++ b/blog/templates/account/sidebar.html
@@ -41,7 +41,7 @@
               </ul>
 	          </li>
 	          <li>
-              <a href="{% url 'posts:post-upload'%}">Upload Post</a>
+              <a href="{% url 'posts:post_create'%}">Upload Post</a>
 	          </li>
 			  <li>
               <a href="{% url 'posts:politics'%}">Politics</a>
